# srf_laser_odometry

./: CMakeLists.txt  README.md  package.xml
launch/: srf_laser_odometry.launch  test_odometry_simulation.launch
launch/simul_data/: MAPIRlab_furniture.pgm  MAPIRlab_furniture.world  MAPIRlab_furniture.yaml  giraff.urdf  simbot_costmap_common_params.yaml  simbot_costmap_global_params.yaml  simbot_costmap_local_params.yaml  simbot_fake_loc.launch  simbot_global_planner_params.yaml  simbot_local_planner_params.yaml  simbot_map_server.launch  simbot_move_base.launch  simbot_srf.rviz  simbot_stage.launch  simbot_urdf.launch
src/: laser_odometry_refscans.cpp  laser_odometry_refscans.h  srf_node.cpp  srf_node.h  srf_to_txt_node.cpp
